--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:theme="@style/Theme.AplicacioMultimediaAlexS"
         tools:targetApi="31">
         <activity
+            android:name=".Objectes.Llistat_Arxius"
+            android:exported="false" />
+        <activity
+            android:name=".Video_Activity"
+            android:exported="false" />
+        <activity
             android:name=".Text_Activity"
             android:exported="false" />
         <activity
