--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools" >
+
+    <!-- Uses features -->
+    <uses-feature android:name="android.hardware.camera" android:required="false" />
+    <uses-feature android:name="android.hardware.microphone" android:required="false" />
+
+    <!-- Permissions -->
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
 
     <application
         android:allowBackup="true"
@@ -12,27 +22,18 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AplicacioMultimediaAlexS"
         tools:targetApi="31">
-        <activity
-            android:name=".Objectes.Llistat_Arxius"
-            android:exported="false" />
-        <activity
-            android:name=".Video_Activity"
-            android:exported="false" />
-        <activity
-            android:name=".Text_Activity"
-            android:exported="false" />
-        <activity
-            android:name=".Visualitzar_Reproduir_Editar"
-            android:exported="false" />
-        <activity
-            android:name=".MainActivity"
-            android:exported="true">
+
+        <!-- Activities -->
+        <activity android:name=".Cam_Activity" android:exported="false" />
+        <activity android:name=".Objectes.Llistat_Arxius" android:exported="false" />
+        <activity android:name=".Video_Activity" android:exported="false" />
+        <activity android:name=".Text_Activity" android:exported="false" />
+        <activity android:name=".Visualitzar_Reproduir_Editar" android:exported="false" />
+        <activity android:name=".MainActivity" android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
     </application>
-
 </manifest>
