--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,9 @@
         android:theme="@style/Theme.AplicacioMultimediaAlexS"
         tools:targetApi="31">
         <activity
+            android:name=".Tria_Arxiu"
+            android:exported="false" />
+        <activity
             android:name=".ServeisOnline"
             android:exported="false" />
         <activity
